Mark e10-22 story as done
- Add story file for bit pattern editor clickability fix
- Update epic-10.md to reference new story
- Update sprint-status.yaml to mark story as done

--- a/docs/sprint-artifacts/sprint-status.yaml
+++ b/docs/sprint-artifacts/sprint-status.yaml
@@ -144,4 +144,5 @@ development_status:
   e10-20-reposition-quantize-controls-per-design: done
   e10-21-add-drag-to-paint-values: done
   e10-22-add-undo-for-quantization: done
+  e10-22-fix-bit-pattern-editor-clickability: done
   epic-10-retrospective: optional
