--- a/.github/workflows/tag-build.yml
+++ b/.github/workflows/tag-build.yml
@@ -396,14 +396,23 @@ jobs:
           echo "Identities in keychain:"
           security find-identity -v -p codesigning "$KEYCHAIN_NAME" || true
 
-      - name: Build macOS
-        run: flutter build macos
+      - name: Build macOS (unsigned)
+        run: |
+          flutter build macos -- \
+            CODE_SIGN_IDENTITY="" \
+            CODE_SIGNING_REQUIRED=NO \
+            CODE_SIGNING_ALLOWED=NO
 
       - name: Codesign the macOS App
         run: |
           codesign --deep --force --verbose --options runtime \
             --sign "Developer ID Application: Neal Sanche (KN424RZG26)" \
             --entitlements macos/Runner/Release.entitlements \
+            build/macos/Build/Products/Release/nt_helper.app
+
+      - name: Verify codesign
+        run: |
+          codesign --verify --deep --strict --verbose=4 \
             build/macos/Build/Products/Release/nt_helper.app
 
       - name: Zip the macOS App for Notarization
@@ -453,16 +462,8 @@ jobs:
     name: Build macOS App and Upload to TestFlight
     runs-on: macos-latest
     needs: [setup, create-release]
-    if: |
-      always() &&
-      needs.setup.result == 'success' &&
-      (needs.create-release.result == 'success' || needs.create-release.result == 'skipped') &&
-      (
-        github.event_name == 'push' ||
-        contains(github.event.inputs.platforms, 'macos_testflight') ||
-        github.event.inputs.platforms == 'all' ||
-        github.event.inputs.platforms == ''
-      )
+    # DISABLED: Provisioning not complete - missing 3rd Party Mac Developer Installer cert
+    if: false
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
