--- a/.github/workflows/tag-build.yml
+++ b/.github/workflows/tag-build.yml
@@ -514,7 +514,8 @@ jobs:
             -k "$KEYCHAIN_NAME" \
             -P "${{ secrets.APPLE_CERTIFICATES_PASSWORD }}" \
             -T /usr/bin/codesign \
-            -T /usr/bin/productsign
+            -T /usr/bin/productsign \
+            -T /usr/bin/productbuild
 
           security set-key-partition-list -S apple-tool:,apple: -k "" "$KEYCHAIN_NAME"
 
