fix: add LSApplicationCategoryType for App Store submission

--- a/macos/Runner/Info.plist
+++ b/macos/Runner/Info.plist
@@ -38,5 +38,7 @@
 	<string>This app needs access so that you can select your SD Card root directory to index your presets in disk mode.</string>
 	<key>NSCameraUsageDescription</key>
 	<string>This app uses the camera to display the Disting NT screen via USB video capture.</string>
+	<key>LSApplicationCategoryType</key>
+	<string>public.app-category.music</string>
 </dict>
 </plist>
