--- a/.github/workflows/tag-build.yml
+++ b/.github/workflows/tag-build.yml
@@ -560,13 +560,18 @@ jobs:
 
       - name: Codesign nt-flash helper for sandbox
         run: |
-          # Sign without bundle identifier - plain executable tools don't need one
-          # Using -i "" removes any existing identifier
+          # For TestFlight, helper tools must be signed without an identifier
+          # to avoid "missing provisioning profile" errors.
+          # Using --identifier="" explicitly removes the identifier.
+          # Note: Not using entitlements file - the tool inherits sandbox from parent.
           codesign --force --verbose --options runtime \
             --sign "Apple Distribution: Neal Sanche (KN424RZG26)" \
-            --entitlements macos/Runner/nt-flash.entitlements \
-            -i "" \
+            --identifier "" \
             build/macos/Build/Products/Release/nt_helper.app/Contents/MacOS/nt-flash
+          
+          # Verify the signature has no identifier
+          echo "Verifying signature:"
+          codesign -d -vvv build/macos/Build/Products/Release/nt_helper.app/Contents/MacOS/nt-flash 2>&1 | grep -E "Identifier|TeamIdentifier"
 
       - name: Codesign the macOS App for App Store
         run: |
