--- a/macos/Runner/nt-flash.entitlements
+++ b/macos/Runner/nt-flash.entitlements
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>com.apple.application-identifier</key>
+	<string>KN424RZG26.dev.nosuch.ntHelper.nt-flash</string>
+	<key>com.apple.developer.team-identifier</key>
+	<string>KN424RZG26</string>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
 	<key>com.apple.security.inherit</key>
