fix: use forked dart_midi and add debug channel for Linux shutdown
- Add midi dependency override to use forked dart_midi with ALSA port
  close fix (closes port before killing isolate to unblock FFI read)
- Add usb_video_debug event channel to Linux USB video plugin

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -120,6 +120,9 @@ dependency_overrides:
     git: https://github.com/thorinside/flutter_midi_command_linux.git
   flutter_midi_command_windows:
     git: https://github.com/thorinside/flutter_midi_command_windows.git
+  # Use forked dart_midi with fix for Linux shutdown hang (closes ALSA port before killing isolate)
+  midi:
+    git: https://github.com/thorinside/dart_midi.git
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
