--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ analyzer:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_driver:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
